# DrawTaxi

./: .gitignore  AGENTS.md  PLAN.md  PLAN_AMELIORATIONS_GPS.md  PLAN_FLUX_NAVIGATION.md  PLAN_LLAMA.md  PLAN_NOUVELLES_FEATURES.md  README.md  ROADMAP_AMELIORATIONS.md  build.gradle.kts  build_errors.txt  fix_imports.ps1  gradle.properties  settings.gradle.kts
.github/workflows/: build-release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
app/src/main/java/com/drawtaxi/app/: MainActivity.kt  TaxiApplication.kt
app/src/main/java/com/drawtaxi/app/car/: CarMenuScreen.kt  EditRideCarScreen.kt  RideDetailCarScreen.kt  RideListScreen.kt  TaxiCarAppService.kt
app/src/main/java/com/drawtaxi/app/data/: BackupManager.kt  Models.kt  TaxiRepository.kt
app/src/main/java/com/drawtaxi/app/logic/: AddressNormalizer.kt  AiSmsParser.kt  BootReceiver.kt  EmailFormParser.kt  FetchRoute.kt  GeocodingService.kt  LlamaModelManager.kt  LlmRunner.kt  LocationTrackingService.kt  MessageSender.kt  NotificationHelper.kt  OsmRoutingService.kt  OsrmRoutingService.kt  OvhImapService.kt  OvhMailSender.kt  ParseSms.kt  PermissionHelper.kt  PriceEngine.kt  QuoteResponseHandler.kt  RideCalculator.kt  RideMatcher.kt  ShareUtils.kt  SmsForegroundService.kt  SmsProcessor.kt  SmsReceiver.kt  SmsScanWorker.kt  SmsScanner.kt  (+4 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: automotive_app_desc.xml  provider_paths.xml
(+154 files in other folders)
